--- a/src/i18n/tw.json
+++ b/src/i18n/tw.json
@@ -9,7 +9,7 @@
         "about": "關於",
         "docs": "說明文件",
         "contact": "聯絡我們",
-        "action": "Get Started"
+        "action": "入門"
     },
     "footer":{
         "resources": "資源",
@@ -19,5 +19,13 @@
         "legal": "Legal",
         "privacy": "隱私權政策",
         "terms": "使用條款"
+    },
+    "feature":{
+        "title1": "一鍵上傳",
+        "desc1": "Share your photos with your friends and family easily. No more sign up or premium plan.",
+        "title2": "Not just a image viewer",
+        "desc2": "You can adjust the brightness, contrast, saturation, and warmth of your photos. After that, you can choose to save it as a new file or other format.",
+        "title3": "Suited to your needs",
+        "desc3": "Open your file from URL, tree view sidebar, file dialog, or take a photo straight from your webcam!"
     }
 }
